--- a/config.json
+++ b/config.json
@@ -80,6 +80,11 @@
     "haohua": {
       "api": "https://hhzyapi.com/api.php/provide/vod",
       "name": "豪华资源"
+    },
+    "taopian": {
+      "api": "https://taopianapi.com/cjapi/sda/vod",
+      "name": "淘片资源"
     }
+    
   }
 }
